styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat&display=swap');

html,
body {
  padding: 0;
  margin: 0;
  font-family: 'Playfair+Display', 'Montserrat', sans-serif;
  background-image: url(../public/background.jpg), linear-gradient(#efc7d0, #5C4294);
  background-attachment: fixed;
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat; 
  background-blend-mode: multiply;
  background-color: #EFC7D0;
  color: #EFC7D0;
  background-size: cover;
  min-width: 100vw;
  min-height: 100vh;
}

a {
  color: inherit;
  text-decoration: none;
}

h1 {
  background-image: linear-gradient(45deg, #efc7d0, #ff956e);
  background-size: 100%;
  -webkit-text-fill-color: transparent; 
  -moz-text-fill-color: transparent;
  font-family: 'Montserrat';
  /* text-shadow: 0 0 2px white; */
}

h2 {
  font-family: 'Montserrat';
  font-variant: small-caps;
}

h2, p, button {
  font-family: 'Montserrat';
}

* {
  box-sizing: border-box;
}

